Prepare OrbitSMS for deployment
